[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-satsignal"
version = "0.1.0"
description = "LangChain callback that anchors agent decisions on BSV via Satsignal."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Satsignal" }]
keywords = ["langchain", "satsignal", "audit", "bsv", "blockchain", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://satsignal.cloud"
Documentation = "https://proof.satsignal.cloud/agents"
Source = "https://github.com/Steleet/langchain-satsignal"

[tool.hatch.build.targets.wheel]
packages = ["langchain_satsignal"]
